--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
+    implementation 'com.commit451:PhotoView:1.2.4'
+    implementation 'com.github.f0ris.sweetalert:library:1.6.2'
 }
