--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,6 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
+    implementation 'com.google.android.gms:play-services-ads:19.1.0'
+
 }
