--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.yemekDefteri"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 3
-        versionName "1.3"
+        versionCode 4
+        versionName "1.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -35,5 +35,6 @@ dependencies {
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.google.android.gms:play-services-ads:19.1.0'
+    implementation 'com.karumi:dexter:4.2.0'
 
 }
