--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "com.yemekDefteri"
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 5
-        versionName "1.5"
+        versionCode 6
+        versionName "1.6"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
@@ -31,10 +31,10 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'de.hdodenhof:circleimageview:3.1.0'
-    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.commit451:PhotoView:1.2.4'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.google.android.gms:play-services-ads:19.1.0'
     implementation 'com.karumi:dexter:4.2.0'
-
+    implementation 'com.github.barteksc:android-pdf-viewer:2.8.2'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
 }
