--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,8 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.yemekDefteri"
-    android:versionCode="8"
-    android:versionName="1.8">
+    android:versionCode="9"
+    android:versionName="1.9">
 
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -36,10 +36,10 @@
           </intent-filter>
         </activity>
         <activity android:name=".yeniYemekActivity"
-            android:label="Yemek Defteri"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <activity android:name=".guncelle"
-            android:label="Yemek Defteri"
+            android:label="@string/app_name"
             android:screenOrientation="portrait"/>
         <meta-data
             android:name="com.google.android.gms.ads.APPLICATION_ID"
